--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "test": "jest --watchAll",
     "start": "cross-env NODE_ENV=development webpack serve --mode development",
     "build": "cross-env NODE_ENV=production webpack --mode production",
-    "analyze": "webpack --profile --json > stats.json && webpack-bundle-analyzer stats.json",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "analyze": "webpack --profile --json > stats.json && webpack-bundle-analyzer stats.json"
   },
   "author": "Eduard Vorsin",
   "license": "ISC",
