--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "@babel/preset-typescript": "^7.18.6",
     "@svgr/webpack": "^6.5.1",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
-    "babel-jest": "^29.4.2",
     "babel-loader": "^9.1.2",
     "browserslist": "^4.21.5",
     "compression-webpack-plugin": "^10.0.0",
@@ -53,6 +53,7 @@
     "jest-environment-jsdom": "^29.4.2",
     "jest-watch-typeahead": "^2.2.2",
     "mini-css-extract-plugin": "^2.7.2",
+    "msw": "^1.2.1",
     "postcss-import": "^15.1.0",
     "postcss-loader": "^7.0.2",
     "postcss-preset-env": "^8.0.1",
@@ -63,6 +64,7 @@
     "svgo": "^3.0.2",
     "terser-webpack-plugin": "^5.3.6",
     "thread-loader": "^3.0.4",
+    "ts-jest": "^29.1.0",
     "typescript": "^4.9.5",
     "typescript-plugin-css-modules": "^4.1.1",
     "webpack": "^5.75.0",
@@ -73,8 +75,8 @@
   "dependencies": {
     "@babel/runtime": "^7.20.13",
     "@mui/icons-material": "^5.11.11",
-    "@mui/material": "^5.11.13",
-    "@mui/styled-engine-sc": "^5.11.11",
+    "@mui/material": "^5.13.0",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@types/jest": "^29.4.0",
@@ -83,7 +85,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.10",
+    "whatwg-fetch": "^3.6.2"
   },
   "browserslist": {
     "production": [
